# cpr-indoornav-navigation

./: README.md
cpr_indoornav_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
cpr_indoornav_navigation/launch/: move_goal_node.launch
cpr_indoornav_navigation/ros2/: send_move_goal.bash  setup-ros2.bash
cpr_indoornav_navigation/scripts/: move_goal_node
cpr_indoornav_navigation/src/cpr_indoornav_navigation/: move_goal_node.py
cpr_indoornav_navigation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
cpr_indoornav_navigation_msgs/action/: ExecuteMission.action  MoveGoal.action  MoveToLocation.action
cpr_indoornav_navigation_msgs/msg/: Marker.msg  Mission.msg  Place.msg  Task.msg
cpr_indoornav_navigation_msgs/srv/: GetMarkers.srv  GetMissions.srv  GetPlaces.srv
