<?xml version="1.0"?>
<package format="2">
  <name>cpr_indoornav_navigation</name>
  <version>0.0.0</version>
  <description>The cpr_indoornav_navigation package</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <depend>rospy</depend>

  <depend>actionlib</depend>
  <depend>cpr_indoornav_base</depend>
  <depend>cpr_indoornav_navigation_msgs</depend>
  <depend>python3-requests</depend>

  <export>
  </export>
</package>
