<?xml version="1.0"?>
<package format="2">
  <name>cpr_indoornav_navigation_msgs</name>
  <version>0.0.1</version>
  <description>The cpr_indoornav_navigation_msgs package</description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
